# LIC

./: .gitignore  app.py  generate_docs.py  main.ipynb  pyproject.toml  requirements.txt
src/: DocumentGenerator.py  DocumentGeneratorBudget.py  DocumentGeneratorStrategicActivites.py
templates/: template_budget.docx  template_strategic_activities.docx
